--- a/apps/desktop/src/renderer/index.html
+++ b/apps/desktop/src/renderer/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Pillo</title>
-    <link rel="stylesheet" href="./style.css"> </head>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
   <body>
-    <div id="root"></div> <script type="module" src="/main.tsx"></script> </body>
+    <div id="root"></div>
+    <script type="module" src="/main.tsx"></script>
+  </body>
 </html>
